Add reproducible EMF code generation for Guesstimate
Add the standalone releng codegen project, preserve customized generated
code, synchronize plugin properties, and initialize missing SVG icons.